More efficient single Dockerfile setup